--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8657">
-	<link rel="stylesheet" type="text/css" href="style.css?4972">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7117">
+	<link rel="stylesheet" type="text/css" href="style.css?1244">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>About</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none bgc-black d-bloc " id="bloc-0">
+<div class="bloc none bgc-black d-bloc" id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -81,7 +81,7 @@
 					About
 				</h1>
 				<p class="p-style">
-					<a href="https://www.solent.ac.uk/">Solent University</a> Computing Subject Group's Happy Hour Talks offer insights to working within the digital and tech industry by bringing in practitioners, including Solent Alumni, to share their professional journeys. <br><br>Happy Hour talks take place on Thursdays 5pm - 6.15pm (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 5.15pm. Some weeks there will be more than one speaker/activity and we normally continue the discussion in the <a href="https://www.oneills.co.uk/national-search/south-east/southampton#">O&rsquo; Neill's pub 130-132 Above Bar Street</a> so please do join us after this event if you are able to.<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk or joe.appleton@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent<br></a><br>Previous Happy Hour Events:<br><a href="https://martinsolent.github.io/happyhour20/">Happy Hour 2022</a><br><a href="https://martinsolent.github.io/happyhour19/">Happy Hour 2019</a><br><a href="https://martinsolent.github.io/happyhour18/">Happy Hour 2018</a><br><a href="https://martinsolent.github.io/happy_hour_site17/">Happy Hour 2017</a><br>
+					<a href="https://www.solent.ac.uk/">Solent University</a> Computing Subject Group's Happy Hour Talks offer insights to working within the digital and tech industry by bringing in practitioners, including Solent Alumni, to share their professional journeys. <br><br>Happy Hour talks take place on Thursdays 5pm - 6.15pm (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br> <br><strong>PLEASE NOTE:</strong> You need a Solent Campus card to enter the Sir James Matthew Building - If you do not have one, DM <a href="https://twitter.com/webdevsolent">@WebDevSolent</a> (twitter) or email martin.reid@solent.ac.uk when you arrive and we will let you in.<br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 5.15pm. Some weeks there will be more than one speaker/activity and we normally continue the discussion in the <a href="https://www.oneills.co.uk/national-search/south-east/southampton#">O&rsquo; Neill's pub 130-132 Above Bar Street</a> so please do join us after this event if you are able to.<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk or joe.appleton@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent<br></a><br>Previous Happy Hour Events:<br><a href="https://martinsolent.github.io/happyhour20/">Happy Hour 2022</a><br><a href="https://martinsolent.github.io/happyhour19/">Happy Hour 2019</a><br><a href="https://martinsolent.github.io/happyhour18/">Happy Hour 2018</a><br><a href="https://martinsolent.github.io/happy_hour_site17/">Happy Hour 2017</a><br>
 				</p>
 			</div>
 		</div>
@@ -129,9 +129,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?223"></script>
-<script src="./js/bootstrap.bundle.min.js?8598"></script>
-<script src="./js/blocs.min.js?7541"></script>
+<script src="./js/jquery.min.js?9541"></script>
+<script src="./js/bootstrap.bundle.min.js?3498"></script>
+<script src="./js/blocs.min.js?2907"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
