--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?5201">
-	<link rel="stylesheet" type="text/css" href="style.css?9859">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?704">
+	<link rel="stylesheet" type="text/css" href="style.css?2313">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none bgc-black d-bloc" id="bloc-0">
+<div class="bloc none bgc-black d-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -81,7 +81,7 @@
 					Happy Hour 2022
 				</h1>
 				<p class="p-1-bloc-2-style mg-lg">
-					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>Some weeks we will have one or two speakers and panel discussions - each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0YN.</a>&nbsp;We normally continue the discussion in O&rsquo;Neill's pub 130-132 Above Bar Street so please do join us after each event if you are able to.&nbsp; <br><br>
+					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>Some weeks we will have one or two speakers and panel discussions - each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, SO14 0YN.</a>&nbsp;We normally continue the discussion in O&rsquo;Neill's pub 130-132 Above Bar Street so please do join us after each event if you are able to.&nbsp; <br><br>
 				</p>
 			</div>
 		</div>
@@ -108,7 +108,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238595889_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Robbie Rice" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238595889_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Lee Mallon" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-3-style">
 							<strong>Lee Mallon</strong><br>Strategic Technical <br>Consultant&nbsp;<br><strong>24/3/2022</strong><br>
@@ -118,11 +118,11 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
 				<div class="card d-block">
-					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238597449_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Suzy Dierckx" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_241104939_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Grad First Job" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-4-style">
-							<strong>Vanessa Davies</strong><br>&nbsp;Digital Communications Manager at Chaptr Studio<br><strong>24/3/2022</strong><br>
-						</p><a href="https://www.eventbrite.co.uk/manage/events/288424323917/details" class="btn btn-block btn-ferrari-red ">Event 3 register</a>
+							<strong>Student Panel</strong><br>Getting Your <br>First Job<br><strong>31/3/2022</strong><br>
+						</p><a href="https://www.eventbrite.co.uk/e/289271467747" class="btn btn-block btn-ferrari-red">Event 4 register</a>
 					</div>
 				</div>
 			</div>
@@ -130,43 +130,17 @@
 		<div class="row voffset-md">
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_241104939_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Richard Coope" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_239388769_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Richard Coope" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
-							<strong>Student Panel</strong><br>Getting Your <br>First Job<br><strong>31/3/2022</strong><br>
-						</p><a href="https://www.eventbrite.co.uk/e/289271467747" class="btn btn-block btn-ferrari-red">Event 4 register</a>
-					</div>
-				</div>
-			</div>
-			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center d-block">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_239388769_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="student panel picture" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-bloc-2-style">
 							<strong>Student Panel</strong><br>Work Experience&nbsp;<br>&amp; Placements<br><strong>7/4/2022.&nbsp;</strong><br>
 						</p><a href="https://www.eventbrite.co.uk/e/288075239797" class="btn btn-block btn-ferrari-red">Event 5 register</a>
 					</div>
 				</div>
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/Dan.jpg" class="img-fluid mx-auto d-block lazyload" alt="Daniel Jones" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-3-style">
-							<strong>Daniel Jones</strong> <br>Digital Product Lead<br>at Steadfast Collective<br><strong>26/2/2020</strong><br>
-						</p><a href="https://www.eventbrite.co.uk/e/daniel-jones-tickets-88097306415" class="btn btn-block btn-ferrari-red">Event 5 register</a>
-					</div>
-				</div>
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
-				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/chris_key.jpg" class="img-fluid mx-auto d-block lazyload" alt="Daniel Jones" />
-					<div class="card-body">
-						<p class="text-lg-center text-center p-4-style">
-							<strong>Chris Key</strong><br>Design Sprint facilitator &amp; Brand strategist<br><strong>26/2/2020</strong><br>
-						</p><a href="https://www.eventbrite.co.uk/e/daniel-jones-tickets-88097306415" class="btn btn-block btn-ferrari-red">Event 5 register</a>
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -198,9 +172,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9541"></script>
-<script src="./js/bootstrap.bundle.min.js?3498"></script>
-<script src="./js/blocs.min.js?2907"></script>
+<script src="./js/jquery.min.js?6761"></script>
+<script src="./js/bootstrap.bundle.min.js?6746"></script>
+<script src="./js/blocs.min.js?4229"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
