--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_241104939_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Grad First Job" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-4-style">
-							<strong>Student Panel</strong><br>Getting Your <br>First Job<br><strong>31/3/2022</strong><br>
+							<strong>Graduate Panel</strong><br>Getting Your <br>First Job<br><strong>31/3/2022</strong><br>
 						</p><a href="https://www.eventbrite.co.uk/e/289271467747" class="btn btn-block btn-ferrari-red">Event 4 register</a>
 					</div>
 				</div>
