--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
 				<div class="card d-block">
-					img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238595889_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Lee Mallon" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238595889_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Lee Mallon" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-3-style">
-							<strong>Lee Mallon</strong><br>Strategic Technical <br>Consultant&nbsp;<br><strong>24/3/2022</strong><br>
+							<strong>Vanessa Davies</strong><br>Digital Communications Strategist<br><strong>24/3/2022</strong><br>
 						</p><a href="https://www.eventbrite.co.uk/e/288424323917" class="btn btn-style btn-ferrari-red btn-block">Event 3 register</a>
 					</div>
 				</div>
