--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
 				<div class="card d-block">
-					<img src="img/lazyload-ph.png" data-src="imgvanessa_1.jpg" class="img-fluid mx-auto d-block lazyload" alt="Lee Mallon" />
+					<img src="img/lazyload-ph.png" data-src="img/vanessa_1.jpg" class="img-fluid mx-auto d-block lazyload" alt="Lee Mallon" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-3-style">
 							<strong>Vanessa Davies</strong><br>Digital Communications Strategist<br><strong>24/3/2022</strong><br>
