--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 					Happy Hour 2022
 				</h1>
 				<p class="p-1-bloc-2-style mg-lg">
-					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>Some weeks we will have one or two speakers and panel discussions - each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, SO14 0YN.</a>&nbsp;We normally continue the discussion in O&rsquo;Neill's pub 130-132 Above Bar Street so please do join us after each event if you are able to.&nbsp; <br><br>
+					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>Some weeks we will have one or two speakers and panel discussions - each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building TS302, Solent University, East Park Terrace, Southampton, SO14 0YN.</a>&nbsp;We normally continue the discussion in O&rsquo;Neill's pub 130-132 Above Bar Street so please do join us after each event if you are able to.&nbsp; <br><br>
 				</p>
 			</div>
 		</div>
