--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8016">
-	<link rel="stylesheet" type="text/css" href="style.css?7515">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1929">
+	<link rel="stylesheet" type="text/css" href="style.css?1469">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Contact</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none bgc-black d-bloc " id="bloc-0">
+<div class="bloc none bgc-black d-bloc" id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -47,6 +47,9 @@
 							</li>
 							<li class="nav-item">
 								<a href="about.html" class="a-btn nav-link ltc-white">About</a>
+							</li>
+							<li class="nav-item">
+								<a href="podcast.html" class="a-btn nav-link ltc-white">Podcast</a>
 							</li>
 							<li class="nav-item">
 								<a href="contact.html" class="a-btn nav-link ltc-white">Contact</a>
@@ -165,9 +168,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?223"></script>
-<script src="./js/bootstrap.bundle.min.js?8598"></script>
-<script src="./js/blocs.min.js?7541"></script>
+<script src="./js/jquery.min.js?993"></script>
+<script src="./js/bootstrap.bundle.min.js?223"></script>
+<script src="./js/blocs.min.js?3954"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
