--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?704">
-	<link rel="stylesheet" type="text/css" href="style.css?2313">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7992">
+	<link rel="stylesheet" type="text/css" href="style.css?2733">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none bgc-black d-bloc " id="bloc-0">
+<div class="bloc none bgc-black d-bloc" id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -47,6 +47,9 @@
 							</li>
 							<li class="nav-item">
 								<a href="about.html" class="a-btn nav-link ltc-white">About</a>
+							</li>
+							<li class="nav-item">
+								<a href="podcast.html" class="a-btn nav-link ltc-white">Podcast</a>
 							</li>
 							<li class="nav-item">
 								<a href="contact.html" class="a-btn nav-link ltc-white">Contact</a>
@@ -81,7 +84,7 @@
 					Happy Hour 2022
 				</h1>
 				<p class="p-1-bloc-2-style mg-lg">
-					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>Some weeks we will have one or two speakers and panel discussions - each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building TS302, Solent University, East Park Terrace, Southampton, SO14 0YN.</a>&nbsp;We normally continue the discussion in O&rsquo;Neill's pub 130-132 Above Bar Street so please do join us after each event if you are able to.&nbsp; <br><br>
+					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>Some weeks we will have one or two speakers and panel discussions - each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0OYN.</a>&nbsp;We normally continue the discussion in O&rsquo;Neill's pub 130-132 Above Bar Street so please do join us after each event if you are able to.&nbsp; <br><br>
 				</p>
 			</div>
 		</div>
@@ -98,7 +101,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238055399_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Kev Borrill" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238055399_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="John Kilmister" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-bloc-2-style">
 							<strong>John Kilmister</strong><br>Software Engineer <br>&amp; Architect<br><strong>17/3/2022</strong><br>
@@ -118,11 +121,11 @@
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
 				<div class="card d-block">
-					<img src="img/lazyload-ph.png" data-src="img/vanessa_1.jpg" class="img-fluid mx-auto d-block lazyload" alt="Lee Mallon" />
+					<img src="img/lazyload-ph.png" data-src="img/vanessa_1.jpg" class="img-fluid mx-auto d-block lazyload" alt="Suzy Dierckx" />
 					<div class="card-body">
-						<p class="text-lg-center text-center p-3-style">
+						<p class="text-lg-center text-center p-4-style">
 							<strong>Vanessa Davies</strong><br>Digital Communications Strategist<br><strong>24/3/2022</strong><br>
-						</p><a href="https://www.eventbrite.co.uk/e/288424323917" class="btn btn-style btn-ferrari-red btn-block">Event 3 register</a>
+						</p><a href="https://www.eventbrite.co.uk/e/288424323917" class="btn btn-block btn-ferrari-red">Event 3 register</a>
 					</div>
 				</div>
 			</div>
@@ -130,23 +133,25 @@
 		<div class="row voffset-md">
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_241104939_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Grad First Job" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_241104939_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Graduate Panel" />
 					<div class="card-body">
-						<p class="text-lg-center text-center p-4-style">
+						<p class="text-lg-center text-center p-1-style">
 							<strong>Graduate Panel</strong><br>Getting Your <br>First Job<br><strong>31/3/2022</strong><br>
 						</p><a href="https://www.eventbrite.co.uk/e/289271467747" class="btn btn-block btn-ferrari-red">Event 4 register</a>
 					</div>
 				</div>
 			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
+			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_239388769_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Richard Coope" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_239388769_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Student Panel" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Student Panel</strong><br>Work Experience&nbsp;<br>&amp; Placements<br><strong>7/4/2022.&nbsp;</strong><br>
 						</p><a href="https://www.eventbrite.co.uk/e/288075239797" class="btn btn-block btn-ferrari-red">Event 5 register</a>
 					</div>
 				</div>
+			</div>
+			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
 			</div>
@@ -180,9 +185,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?6761"></script>
-<script src="./js/bootstrap.bundle.min.js?6746"></script>
-<script src="./js/blocs.min.js?4229"></script>
+<script src="./js/jquery.min.js?993"></script>
+<script src="./js/bootstrap.bundle.min.js?223"></script>
+<script src="./js/blocs.min.js?3954"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
