update podcast page

--- a/podcast.html
+++ b/podcast.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?979">
-	<link rel="stylesheet" type="text/css" href="style.css?2225">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3228">
+	<link rel="stylesheet" type="text/css" href="style.css?9622">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Podcast</title>
@@ -65,7 +65,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1 -->
-<div class="bloc bgc-ferrari-red d-bloc none" id="bloc-1">
+<div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col">
@@ -77,7 +77,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-6 -->
-<div class="bloc tc-black" id="bloc-6">
+<div class="bloc tc-black l-bloc" id="bloc-6">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -85,22 +85,33 @@
 					Happy Hour Digital Industry Podcast
 				</h1>
 				<div class="row voffset-lg">
-					<div class="col">
-						<img src="img/lazyload-ph.png" data-src="img/HH_Logo_podcast_2022.png" class="img-fluid mx-auto d-block lazyload" alt="HH_Logo_podcast_2022" />
+					<div class="col-lg-5">
+						<div class="card border-0">
+							<div class="card-body">
+								<img src="img/lazyload-ph.png" data-src="img/HH_Logo_podcast_2022.png" class="img-fluid mx-auto d-block lazyload" alt="HH_Logo_podcast_2022" />
+							</div>
+						</div>
 					</div>
-					<div class="col">
-						<p>
-							Happy Hour Digital Industry Podcasts offers an insight into working in the tech and digital industries. Talks are mostly focused on students, "early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.
-						</p>
+					<div class="col-lg-7 ">
+						<div class="card border-0">
+							<div class="card-body">
+								<p class="mg-lg">
+									Happy Hour Digital Industry Podcasts offers an insight into working in the tech and digital industries. Talks are mostly focused on students, "early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.
+								</p>
+								<div class="text-center">
+									<a href="https://open.spotify.com/show/0niiCR0uskoswlRicOmHFY" class="btn btn-lg btn-bloc-6-style btn-napier-green">Listen on Spotify</a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="form-group">
 					<div class="row voffset-lg">
 						<div class="col">
 							<div>
-								<p>
-									<iframe src="img/lazyload-ph.png" data-src="https://anchor.fm/happy-hour-talks-podcast/embed" height="102px" width="400px" frameborder="0" class="lazyload">
-									</iframe><br>
+								<p class="p-bloc-6-style mx-auto d-block text-lg-center">
+									<iframe height="102px" width="400px" frameborder="0" class="lazyload" src="img/lazyload-ph.png" data-src="https://anchor.fm/happy-hour-talks-podcast/embed">
+									</iframe>
 								</p>
 							</div>
 						</div>
@@ -118,7 +129,7 @@
 
 
 <!-- bloc-5 -->
-<div class="bloc l-bloc bgc-black" id="bloc-5">
+<div class="bloc bgc-black d-bloc" id="bloc-5">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -137,9 +148,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?993"></script>
-<script src="./js/bootstrap.bundle.min.js?223"></script>
-<script src="./js/blocs.min.js?3954"></script>
+<script src="./js/jquery.min.js?1721"></script>
+<script src="./js/bootstrap.bundle.min.js?7005"></script>
+<script src="./js/blocs.min.js?1708"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
