button colour podcast

--- a/podcast.html
+++ b/podcast.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3228">
-	<link rel="stylesheet" type="text/css" href="style.css?9622">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9131">
+	<link rel="stylesheet" type="text/css" href="style.css?4365">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Podcast</title>
@@ -77,7 +77,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-6 -->
-<div class="bloc tc-black l-bloc" id="bloc-6">
+<div class="bloc tc-black l-bloc " id="bloc-6">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -92,14 +92,14 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-7 ">
+					<div class="col-lg-7">
 						<div class="card border-0">
 							<div class="card-body">
 								<p class="mg-lg">
 									Happy Hour Digital Industry Podcasts offers an insight into working in the tech and digital industries. Talks are mostly focused on students, "early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.
 								</p>
 								<div class="text-center">
-									<a href="https://open.spotify.com/show/0niiCR0uskoswlRicOmHFY" class="btn btn-lg btn-bloc-6-style btn-napier-green">Listen on Spotify</a>
+									<a href="https://open.spotify.com/show/0niiCR0uskoswlRicOmHFY" class="btn btn-lg btn-bloc-6-style btn-ferrari-red">Listen on Spotify</a>
 								</div>
 							</div>
 						</div>
@@ -148,9 +148,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?1721"></script>
-<script src="./js/bootstrap.bundle.min.js?7005"></script>
-<script src="./js/blocs.min.js?1708"></script>
+<script src="./js/jquery.min.js?9627"></script>
+<script src="./js/bootstrap.bundle.min.js?7838"></script>
+<script src="./js/blocs.min.js?4256"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
