add rika  rich vid

--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9202">
-	<link rel="stylesheet" type="text/css" href="style.css?900">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1276">
+	<link rel="stylesheet" type="text/css" href="style.css?8722">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>About</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none bgc-black d-bloc" id="bloc-0">
+<div class="bloc none bgc-black d-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -64,7 +64,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1 -->
-<div class="bloc bgc-ferrari-red d-bloc none" id="bloc-1">
+<div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col">
@@ -76,7 +76,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-3 -->
-<div class="bloc tc-black" id="bloc-3">
+<div class="bloc tc-black l-bloc" id="bloc-3">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="offset-lg-2 col-lg-8">
@@ -84,7 +84,7 @@
 					About
 				</h1>
 				<p class="p-style">
-					<a href="https://www.solent.ac.uk/">Solent University</a> Computing Subject Group's Happy Hour Talks offer insights to working within the digital and tech industry by bringing in practitioners, including Solent Alumni, to share their professional journeys. <br><br>Happy Hour talks take place on Thursdays 5pm - 6.15pm (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 5.15pm. Some weeks there will be more than one speaker/activity and we normally continue the discussion in the <a href="https://www.oneills.co.uk/national-search/south-east/southampton#">O&rsquo; Neill's pub 130-132 Above Bar Street</a> so please do join us after this event if you are able to.<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk or joe.appleton@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent<br></a><br>Previous Happy Hour Events:<br><a href="https://martinsolent.github.io/happyhour20/">Happy Hour 2020</a><br><a href="https://martinsolent.github.io/happyhour19/">Happy Hour 2019</a><br><a href="https://martinsolent.github.io/happyhour18/">Happy Hour 2018</a><br><a href="https://martinsolent.github.io/happy_hour_site17/">Happy Hour 2017</a><br>
+					<a href="https://www.solent.ac.uk/">Solent University</a> Computing Subject Group's Happy Hour Talks offer insights to working within the digital and tech industry by bringing in practitioners, including Solent Alumni, to share their professional journeys. <br><br>Happy Hour talks take place on Thursdays 5pm - 6.15pm (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 5.15pm. Some weeks there will be more than one speaker/activity and we normally continue the discussion in the pub&nbsp;so please do join us after this event if you are able to.<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk or joe.appleton@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent<br></a><br>Previous Happy Hour Events:<br><a href="https://martinsolent.github.io/happyhour20/">Happy Hour 2020</a><br><a href="https://martinsolent.github.io/happyhour19/">Happy Hour 2019</a><br><a href="https://martinsolent.github.io/happyhour18/">Happy Hour 2018</a><br><a href="https://martinsolent.github.io/happy_hour_site17/">Happy Hour 2017</a><br>
 				</p>
 			</div>
 		</div>
@@ -113,7 +113,7 @@
 
 
 <!-- bloc-5 -->
-<div class="bloc l-bloc bgc-black" id="bloc-5">
+<div class="bloc bgc-black d-bloc" id="bloc-5">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -132,9 +132,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?993"></script>
-<script src="./js/bootstrap.bundle.min.js?223"></script>
-<script src="./js/blocs.min.js?3954"></script>
+<script src="./js/jquery.min.js?9800"></script>
+<script src="./js/bootstrap.bundle.min.js?5559"></script>
+<script src="./js/blocs.min.js?9742"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
