--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1929">
-	<link rel="stylesheet" type="text/css" href="style.css?1469">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9026">
+	<link rel="stylesheet" type="text/css" href="style.css?6696">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Contact</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none bgc-black d-bloc" id="bloc-0">
+<div class="bloc none bgc-black d-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -64,7 +64,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1 -->
-<div class="bloc bgc-ferrari-red d-bloc none" id="bloc-1">
+<div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col">
@@ -76,7 +76,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-4 -->
-<div class="bloc tc-black" id="bloc-4">
+<div class="bloc tc-black l-bloc" id="bloc-4">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -149,7 +149,7 @@
 
 
 <!-- bloc-5 -->
-<div class="bloc l-bloc bgc-black" id="bloc-5">
+<div class="bloc bgc-black d-bloc" id="bloc-5">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -168,9 +168,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?993"></script>
-<script src="./js/bootstrap.bundle.min.js?223"></script>
-<script src="./js/blocs.min.js?3954"></script>
+<script src="./js/jquery.min.js?9800"></script>
+<script src="./js/bootstrap.bundle.min.js?5559"></script>
+<script src="./js/blocs.min.js?9742"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
