--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7992">
-	<link rel="stylesheet" type="text/css" href="style.css?2733">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?3061">
+	<link rel="stylesheet" type="text/css" href="style.css?2919">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -31,7 +31,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none bgc-black d-bloc" id="bloc-0">
+<div class="bloc none bgc-black d-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
@@ -64,7 +64,7 @@
 <!-- bloc-0 END -->
 
 <!-- bloc-1 -->
-<div class="bloc bgc-ferrari-red d-bloc none" id="bloc-1">
+<div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col">
@@ -76,7 +76,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-2 -->
-<div class="bloc tc-black" id="bloc-2">
+<div class="bloc tc-black l-bloc" id="bloc-2">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -84,11 +84,25 @@
 					Happy Hour 2022
 				</h1>
 				<p class="p-1-bloc-2-style mg-lg">
-					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>Some weeks we will have one or two speakers and panel discussions - each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0OYN.</a>&nbsp;We normally continue the discussion in O&rsquo;Neill's pub 130-132 Above Bar Street so please do join us after each event if you are able to.&nbsp; <br><br>
+					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>Some weeks we will have one or two speakers and panel discussions - each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0OYN.</a>&nbsp;We normally continue the discussion in the pub.&nbsp; <br><br>
 				</p>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row voffset">
+			<div class="col-12">
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item lazyload" src="img/lazyload-ph.png" data-src="https://player.vimeo.com/video/693731358?h=21e7e02a3d&amp;color=61e8c2&amp;title=0&amp;byline=0&amp;portrait=0" frameborder="0" allowfullscreen allow="autoplay; fullscreen; picture-in-picture">
+					</iframe>
+				</div>
+				<h3 class="mg-md">
+					Happy Hour Week 1: Mending the Digital Skills Gap with Richard Cooper
+				</h3>
+				<p>
+					Brightful: <a href="https://wearebrightful.com/">wearebrightful.com</a> &amp; Winchester Creatives: <a href="https://www.winchestercreatives.co.uk/">winchestercreatives.co.uk</a><br>
+				</p>
+			</div>
+		</div>
+		<div class="row voffset-lg">
 			<div class="align-self-center col-lg-3 col-md-6">
 				<div class="card">
 					<img src="img/lazyload-ph.png" data-src="img/Richard_photo_use.png" class="img-fluid mx-auto d-block lazyload" alt="Jen Swain" />
@@ -151,7 +165,15 @@
 					</div>
 				</div>
 			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
+			<div class="col-lg-3 col-md-6 align-self-center">
+				<div class="card">
+					<img src="img/lazyload-ph.png" data-src="img/Screenshot%202022-03-30%20at%2019.20.53.png" class="img-fluid mx-auto d-block lazyload" alt="Student Panel" />
+					<div class="card-body">
+						<p class="text-lg-center text-center p-1-style">
+							<strong>Rika Digital</strong><br>Getting Your <br>First Job<br><strong>7/4/2022.&nbsp;</strong><br>
+						</p><a href="https://www.eventbrite.co.uk/e/288075239797" class="btn btn-block btn-ferrari-red">Event 5 register</a>
+					</div>
+				</div>
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
 			</div>
@@ -166,7 +188,7 @@
 
 
 <!-- bloc-5 -->
-<div class="bloc l-bloc bgc-black" id="bloc-5">
+<div class="bloc bgc-black d-bloc" id="bloc-5">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -185,9 +207,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?993"></script>
-<script src="./js/bootstrap.bundle.min.js?223"></script>
-<script src="./js/blocs.min.js?3954"></script>
+<script src="./js/jquery.min.js?9800"></script>
+<script src="./js/bootstrap.bundle.min.js?5559"></script>
+<script src="./js/blocs.min.js?9742"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
