Updated for Nov 24

--- a/podcast.html
+++ b/podcast.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?782">
-	<link rel="stylesheet" type="text/css" href="style.css?8397">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?7654">
+	<link rel="stylesheet" type="text/css" href="style.css?4175">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Podcast</title>
@@ -32,32 +32,55 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none bgc-black d-bloc " id="bloc-0">
+<div class="bloc none l-bloc" id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
-				<nav class="navbar row navbar-expand-md navbar-dark" role="navigation">
-					<a class="navbar-brand ltc-white link-style" href="index.html">Happy Hour</a>
-					<button id="nav-toggle" type="button" class="ml-auto ui-navbar-toggler navbar-toggler border-0 p-0" data-toggle="collapse" data-target=".navbar-1" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse navbar-1">
-						<ul class="site-navigation nav navbar-nav ml-auto">
-							<li class="nav-item">
-								<a href="index.html" class="nav-link  ltc-white">Home</a>
-							</li>
-							<li class="nav-item">
-								<a href="about.html" class="a-btn nav-link ltc-white">About</a>
-							</li>
-							<li class="nav-item">
-								<a href="podcast.html" class="a-btn nav-link ltc-white">Podcast</a>
-							</li>
-							<li class="nav-item">
-								<a href="contact.html" class="a-btn nav-link ltc-white">Contact</a>
-							</li>
-						</ul>
+				<div class="row">
+					<div class="col-12">
+						<nav class="navbar navbar-light row navbar-expand-md">
+							<a class="navbar-brand ltc-black link-style" href="index.html">Happy Hour</a>
+							<button id="nav-toggle" type="button" class="ui-navbar-toggler navbar-toggler border-0 p-0 mr-md-0 ml-auto" data-toggle="collapse" data-target=".navbar-32798" aria-expanded="false" aria-label="Toggle navigation">
+								<span class="navbar-toggler-icon"></span>
+							</button>
+							<div class="collapse navbar-collapse navbar-32798">
+								<ul class="site-navigation nav navbar-nav ml-auto">
+									<li class="nav-item">
+										<a href="index.html" class="nav-link">Home</a>
+									</li>
+									<li class="nav-item">
+										<a href="about.html" class="nav-link">About</a>
+									</li>
+									<li class="nav-item">
+										<a href="podcast.html" class="nav-link">Podcast</a>
+									</li>
+									<li class="nav-item">
+										<div class="dropdown btn-dropdown">
+											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
+											<ul class="dropdown-menu" role="menu">
+												<li class="nav-item">
+													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
+												</li>
+												<li class="nav-item">
+													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
+												</li>
+												<li class="nav-item">
+													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
+												</li>
+												<li class="nav-item">
+													<a href="spring-2017.html" class="nav-link a-btn">Spring 2017</a>
+												</li>
+											</ul>
+										</div>
+									</li>
+									<li class="nav-item">
+										<a href="contact.html" class="nav-link">Contact</a>
+									</li>
+								</ul>
+							</div>
+						</nav>
 					</div>
-				</nav>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -68,7 +91,7 @@
 <div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col">
+			<div class="col ">
 				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" />
 			</div>
 		</div>
@@ -148,9 +171,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9800"></script>
-<script src="./js/bootstrap.bundle.min.js?5559"></script>
-<script src="./js/blocs.min.js?9742"></script>
+<script src="./js/jquery.min.js?5048"></script>
+<script src="./js/bootstrap.bundle.min.js?2776"></script>
+<script src="./js/blocs.min.js?2178"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
