--- a/spring-2022.html
+++ b/spring-2022.html
@@ -5,13 +5,14 @@
     <meta name="keywords" content="digital industry talks">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1766">
-	<link rel="stylesheet" type="text/css" href="style.css?4710">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2793">
+	<link rel="stylesheet" type="text/css" href="style.css?7474">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>Home</title>
+    <title>Home-1</title>
 
 
     
@@ -98,43 +99,57 @@
 </div>
 <!-- bloc-1 END -->
 
-<!-- bloc-2 -->
-<div class="bloc tc-black l-bloc" id="bloc-2">
+<!-- bloc-7 -->
+<div class="bloc tc-black l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
 				<h1 class="mg-md h3-style h1-style">
-					Happy Hour November 2022
+					Happy Hour Archive - March - April 2022
 				</h1>
 				<p class="p-1-bloc-2-style mg-lg">
-					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running two Happy Hour Talks befgore the 2022 Winter break we will start again from February April 2023<br><br>Some weeks we will have one or two speakers and panel discussions - <strong>each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays</strong> in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0YN.</a>&nbsp;We normally continue the discussion in the pub.&nbsp; <br><br>
+					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>Some weeks we will have one or two speakers and panel discussions - each event fits into a 1 to 1.15 hour frame (5pm-6.15pm) on Thursdays in&nbsp;<a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building, Solent University, East Park Terrace, Southampton, S014 0YN.</a>&nbsp;We normally continue the discussion in the pub.&nbsp; <br><br>
+				</p>
+			</div>
+		</div>
+		<div class="row voffset">
+			<div class="col-12">
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item lazyload" src="img/lazyload-ph.png" data-src="https://player.vimeo.com/video/693731358?h=21e7e02a3d&amp;color=61e8c2&amp;title=0&amp;byline=0&amp;portrait=0" frameborder="0" allowfullscreen allow="autoplay; fullscreen; picture-in-picture">
+					</iframe>
+				</div>
+				<h3 class="mg-md">
+					Happy Hour Week 1: Mending the Digital Skills Gap with Richard Cooper
+				</h3>
+				<p>
+					Brightful: <a href="https://wearebrightful.com/">wearebrightful.com</a> &amp; Winchester Creatives: <a href="https://www.winchestercreatives.co.uk/">winchestercreatives.co.uk</a><br>
 				</p>
 			</div>
 		</div>
 		<div class="row voffset-lg">
 			<div class="align-self-center col-lg-3 col-md-6">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/Screenshot%202022-10-30%20at%2014.23.54.png" class="img-fluid mx-auto d-block lazyload" alt="Jen Swain" />
+					<img src="img/lazyload-ph.png" data-src="img/Richard_photo_use.png" class="img-fluid mx-auto d-block lazyload" alt="Jen Swain" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
-							<strong>Student Panel</strong><br>Getting Your First Job<br>&amp; Placements<br><strong>24/11/2022</strong>
-						</p><a href="https://www.eventbrite.co.uk/e/panel-discussion-work-experience-getting-your-first-job-tickets-453020014057" class="btn btn-block btn-ferrari-red">Event 1 register</a>
+							<strong>Richard Coope</strong><br>Founder - Brightful &amp; Winchester Creatives&nbsp;<br><strong>10/3/2022</strong>
+						</p><a href="https://www.eventbrite.co.uk/e/289265760677" class="btn btn-block btn-ferrari-red">Event 1 register</a>
 					</div>
 				</div>
 			</div>
 			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto lazyload" alt="John Kilmister" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238055399_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="John Kilmister" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-bloc-2-style">
-							<strong>To Be&nbsp;Confirmed</strong><br>TBC&nbsp;<br>TBC<br><strong>1/12/2022</strong><br>
-						</p><a href="#" class="btn btn-block btn-ferrari-red">Event 2 register</a>
+							<strong>John Kilmister</strong><br>Software Engineer <br>&amp; Architect<br><strong>17/3/2022</strong><br>
+						</p><a href="https://www.eventbrite.co.uk/e/287975802377" class="btn btn-block btn-ferrari-red">Event 2 register</a>
 					</div>
 				</div>
 			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
+			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Lee Mallon" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_238595889_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Lee Mallon" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-3-style">
 							<strong>Lee Mallon</strong><br>Strategic Technical <br>Consultant&nbsp;<br><strong>24/3/2022</strong><br>
@@ -142,9 +157,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
+			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 d-block">
 				<div class="card d-block">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Suzy Dierckx" />
+					<img src="img/lazyload-ph.png" data-src="img/vanessa_1.jpg" class="img-fluid mx-auto d-block lazyload" alt="Suzy Dierckx" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-4-style">
 							<strong>Vanessa Davies</strong><br>Digital Communications Strategist<br><strong>24/3/2022</strong><br>
@@ -153,10 +168,10 @@
 				</div>
 			</div>
 		</div>
-		<div class="row voffset-md object-hidden">
+		<div class="row voffset-md">
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Graduate Panel" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_241104939_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Graduate Panel" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Graduate Panel</strong><br>Getting Your <br>First Job<br><strong>31/3/2022</strong><br>
@@ -166,7 +181,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Student Panel" />
+					<img src="img/lazyload-ph.png" data-src="img/https___cdn.evbuc.com_images_239388769_62675278207_1_original.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Student Panel" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Student Panel</strong><br>Work Experience&nbsp;<br>&amp; Placements<br><strong>7/4/2022.&nbsp;</strong><br>
@@ -176,7 +191,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Student Panel" />
+					<img src="img/lazyload-ph.png" data-src="img/Screenshot%202022-03-30%20at%2019.20.53.png" class="img-fluid mx-auto d-block lazyload" alt="Student Panel" />
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Rika Digital</strong><br>Getting Your <br>First Job<br><strong>7/4/2022.&nbsp;</strong><br>
@@ -189,7 +204,7 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-2 END -->
+<!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
 <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></a>
