--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1276">
-	<link rel="stylesheet" type="text/css" href="style.css?8722">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6818">
+	<link rel="stylesheet" type="text/css" href="style.css?8329">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,300&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>About</title>
@@ -31,32 +31,55 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc none bgc-black d-bloc " id="bloc-0">
+<div class="bloc none l-bloc" id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col">
-				<nav class="navbar row navbar-expand-md navbar-dark" role="navigation">
-					<a class="navbar-brand ltc-white link-style" href="index.html">Happy Hour</a>
-					<button id="nav-toggle" type="button" class="ml-auto ui-navbar-toggler navbar-toggler border-0 p-0" data-toggle="collapse" data-target=".navbar-1" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse navbar-1">
-						<ul class="site-navigation nav navbar-nav ml-auto">
-							<li class="nav-item">
-								<a href="index.html" class="nav-link  ltc-white">Home</a>
-							</li>
-							<li class="nav-item">
-								<a href="about.html" class="a-btn nav-link ltc-white">About</a>
-							</li>
-							<li class="nav-item">
-								<a href="podcast.html" class="a-btn nav-link ltc-white">Podcast</a>
-							</li>
-							<li class="nav-item">
-								<a href="contact.html" class="a-btn nav-link ltc-white">Contact</a>
-							</li>
-						</ul>
+				<div class="row">
+					<div class="col-12">
+						<nav class="navbar navbar-light row navbar-expand-md">
+							<a class="navbar-brand ltc-black link-style" href="index.html">Happy Hour</a>
+							<button id="nav-toggle" type="button" class="ui-navbar-toggler navbar-toggler border-0 p-0 mr-md-0 ml-auto" data-toggle="collapse" data-target=".navbar-32798" aria-expanded="false" aria-label="Toggle navigation">
+								<span class="navbar-toggler-icon"></span>
+							</button>
+							<div class="collapse navbar-collapse navbar-32798">
+								<ul class="site-navigation nav navbar-nav ml-auto">
+									<li class="nav-item">
+										<a href="index.html" class="nav-link">Home</a>
+									</li>
+									<li class="nav-item">
+										<a href="about.html" class="nav-link">About</a>
+									</li>
+									<li class="nav-item">
+										<a href="podcast.html" class="nav-link">Podcast</a>
+									</li>
+									<li class="nav-item">
+										<div class="dropdown btn-dropdown">
+											<a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Archive</a>
+											<ul class="dropdown-menu" role="menu">
+												<li class="nav-item">
+													<a href="spring-2020.html" class="nav-link">Spring 2020</a>
+												</li>
+												<li class="nav-item">
+													<a href="spring-2019.html" class="nav-link">Spring 2019</a>
+												</li>
+												<li class="nav-item">
+													<a href="spring-2018.html" class="nav-link">Spring 2018</a>
+												</li>
+												<li class="nav-item">
+													<a href="spring-2017.html" class="nav-link a-btn">Spring 2017</a>
+												</li>
+											</ul>
+										</div>
+									</li>
+									<li class="nav-item">
+										<a href="contact.html" class="nav-link">Contact</a>
+									</li>
+								</ul>
+							</div>
+						</nav>
 					</div>
-				</nav>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -67,7 +90,7 @@
 <div class="bloc bgc-ferrari-red none d-bloc" id="bloc-1">
 	<div class="container bloc-md">
 		<div class="row">
-			<div class="col">
+			<div class="col ">
 				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" />
 			</div>
 		</div>
@@ -84,7 +107,7 @@
 					About
 				</h1>
 				<p class="p-style">
-					<a href="https://www.solent.ac.uk/">Solent University</a> Computing Subject Group's Happy Hour Talks offer insights to working within the digital and tech industry by bringing in practitioners, including Solent Alumni, to share their professional journeys. <br><br>Happy Hour talks take place on Thursdays 5pm - 6.15pm (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 5.15pm. Some weeks there will be more than one speaker/activity and we normally continue the discussion in the pub&nbsp;so please do join us after this event if you are able to.<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk or joe.appleton@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent<br></a><br>Previous Happy Hour Events:<br><a href="https://martinsolent.github.io/happyhour20/">Happy Hour 2020</a><br><a href="https://martinsolent.github.io/happyhour19/">Happy Hour 2019</a><br><a href="https://martinsolent.github.io/happyhour18/">Happy Hour 2018</a><br><a href="https://martinsolent.github.io/happy_hour_site17/">Happy Hour 2017</a><br>
+					<a href="https://www.solent.ac.uk/">Solent University</a> Computing Subject Group's Happy Hour Talks offer insights to working within the digital and tech industry by bringing in practitioners, including Solent Alumni, to share their professional journeys. <br><br>Happy Hour talks take place on <strong>Thursdays 5pm - 6.15pm</strong> (university term time only) in <a href="https://goo.gl/maps/6o2VapppYKDaxSym7">Spark Building</a>, Solent University, East Park Terrace, Southampton, S014 0YN. <br><br>Happy Hour Talk Sessions last 1 to 1.5 hours although we will aim to wrap up by 5.15pm. Some weeks there will be more than one speaker/activity and we normally continue the discussion in the pub&nbsp;so please do join us after this event if you are able to.<br><br>For more details or if work in the digital/tech industry and would like to do a talk, please contact martin.reid@solent.ac.uk or joe.appleton@solent.ac.uk<br>and follow us on Twitter <a href="https://twitter.com/WebDevSolent">@WebDevSolent</a><br>
 				</p>
 			</div>
 		</div>
@@ -132,9 +155,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9800"></script>
-<script src="./js/bootstrap.bundle.min.js?5559"></script>
-<script src="./js/blocs.min.js?9742"></script>
+<script src="./js/jquery.min.js?5048"></script>
+<script src="./js/bootstrap.bundle.min.js?2776"></script>
+<script src="./js/blocs.min.js?2178"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
